--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "vite": "^5.4.21"
   },
   "dependencies": {
-    "abandonware": "^1.0.0",
+    "@abandonware/bleno": "^0.6.0",
     "electron-squirrel-startup": "^1.0.1"
   }
 }
