--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -7,5 +7,6 @@ winrt-Windows.Devices.Bluetooth.GenericAttributeProfile ; sys_platform == 'win32
 winrt-Windows.Devices.Bluetooth.Advertisement ; sys_platform == 'win32'
 winrt-Windows.Storage.Streams ; sys_platform == 'win32'
 winrt-Windows.Foundation ; sys_platform == 'win32'
+winrt-Windows.Foundation.Collections ; sys_platform == 'win32'
 pyinstaller>=6.0.0
 pysetupdi @ git+https://github.com/gwangyi/pysetupdi.git
