--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "python:build:win": "cd python && pyinstaller --onefile --name ftms-broadcaster-win ftms_broadcaster.py && mv dist/ftms-broadcaster-win.exe ../resources/",
     "python:build:mac": "cd python && pyinstaller --onefile --name ftms-broadcaster-mac ftms_broadcaster.py && mv dist/ftms-broadcaster-mac ../resources/",
     "python:build": "npm run python:build:win || npm run python:build:mac",
-    "build:all": "npm run python:build && npm run make"
+    "build:all": "npm run python:build && npm run make",
+    "test:mock": "electron test-mock/"
   },
   "keywords": [],
   "author": {
