refactored broadcast to use bleno, now can successfully connect to TrainerDay app on phone

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@electron-forge/plugin-vite": "^7.11.1",
     "@electron/fuses": "^1.8.0",
     "@types/electron-squirrel-startup": "^1.0.2",
+    "@types/node": "^18.19.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "electron": "40.0.0",
@@ -45,5 +46,8 @@
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1"
+  },
+  "optionalDependencies": {
+    "@abandonware/bleno": "^0.6.0"
   }
 }
