successfully established connection between emulator and phone on windows

--- a/FTMSBluetoothForwarder/FTMSBluetoothForwarder.csproj
+++ b/FTMSBluetoothForwarder/FTMSBluetoothForwarder.csproj
@@ -7,6 +7,12 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>false</UseWindowsForms>
     <UseWPF>false</UseWPF>
+
+    <!-- Self-contained publishing settings for standalone exe -->
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>true</SelfContained>
+    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+    <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
   </PropertyGroup>
 
 </Project>
