--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
-    "python:setup": "cd python && pip install -r requirements.txt",
-    "python:build:win": "cd python && pyinstaller --onefile --name ftms-broadcaster-win ftms_broadcaster.py && mv dist/ftms-broadcaster-win.exe ../resources/",
-    "python:build:mac": "cd python && pyinstaller --onefile --name ftms-broadcaster-mac ftms_broadcaster.py && mv dist/ftms-broadcaster-mac ../resources/",
-    "python:build": "npm run python:build:win || npm run python:build:mac",
-    "build:all": "npm run python:build && npm run make",
+    "ftms:build:win": "dotnet publish FTMSBluetoothForwarder/FTMSBluetoothForwarder.csproj -c Release -r win-x64 -o resources",
+    "ftms:build": "npm run ftms:build:win",
+    "build:all": "npm run ftms:build && npm run make",
     "test:mock": "electron test-mock/"
   },
   "keywords": [],
