--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,13 +73,17 @@ jobs:
       - name: Build Electron app
         run: npm run make
 
+      - name: Rename artifact
+        shell: bash
+        run: |
+          EXE=$(find out/make/squirrel.windows -name "*.exe" | head -1)
+          cp "$EXE" "FitBridge-Windows-Setup.exe"
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: windows-build
-          path: |
-            out/make/squirrel.windows/**/*.exe
-            out/make/squirrel.windows/**/*.nupkg
+          path: FitBridge-Windows-Setup.exe
 
   build-macos:
     needs: version
@@ -98,14 +102,19 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build Electron app
-        run: npm run make
+      - name: Build Electron app (universal)
+        run: npx electron-forge make --arch=universal
+
+      - name: Rename artifact
+        run: |
+          ZIP=$(find out/make/zip/darwin -name "*.zip" | head -1)
+          cp "$ZIP" "FitBridge-macOS.zip"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: macos-build
-          path: out/make/zip/darwin/**/*.zip
+          path: FitBridge-macOS.zip
 
   build-linux:
     needs: version
@@ -132,13 +141,20 @@ jobs:
       - name: Build Electron app
         run: npm run make
 
+      - name: Rename artifacts
+        run: |
+          DEB=$(find out/make/deb -name "*.deb" | head -1)
+          RPM=$(find out/make/rpm -name "*.rpm" | head -1)
+          cp "$DEB" "FitBridge-Linux.deb"
+          cp "$RPM" "FitBridge-Linux.rpm"
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: linux-build
           path: |
-            out/make/deb/**/*.deb
-            out/make/rpm/**/*.rpm
+            FitBridge-Linux.deb
+            FitBridge-Linux.rpm
 
   release:
     needs: [version, build-windows, build-macos, build-linux]
@@ -152,17 +168,16 @@ jobs:
           path: artifacts
 
       - name: List artifacts
-        run: find artifacts -type f | head -50
+        run: find artifacts -type f
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ needs.version.outputs.tag }}
-          name: Release ${{ needs.version.outputs.tag }}
+          name: FitBridge ${{ needs.version.outputs.tag }}
           generate_release_notes: true
           files: |
-            artifacts/**/*.exe
-            artifacts/**/*.nupkg
-            artifacts/**/*.zip
-            artifacts/**/*.deb
-            artifacts/**/*.rpm
+            artifacts/windows-build/FitBridge-Windows-Setup.exe
+            artifacts/macos-build/FitBridge-macOS.zip
+            artifacts/linux-build/FitBridge-Linux.deb
+            artifacts/linux-build/FitBridge-Linux.rpm
