--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@electron-forge/plugin-fuses": "^7.11.1",
     "@electron-forge/plugin-vite": "^7.11.1",
     "@electron/fuses": "^1.8.0",
+    "@electron/notarize": "^2.5.0",
+    "@electron/osx-sign": "^1.3.3",
     "@electron/universal": "^2.0.3",
     "@types/electron-squirrel-startup": "^1.0.2",
     "@types/node": "^18.19.0",
