--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,5 @@ pip-delete-this-directory.txt
 FTMSBluetoothForwarder/bin/
 FTMSBluetoothForwarder/obj/
 *.user
+resources/FTMSBluetoothForwarder.pdb
+resources/FTMSBluetoothForwarder.exe
